Bug 195243. Potential hang in typeaheadfind. r=caillon, sr=sspitzer